--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <html>
-    <h1>ectobase golang vanity urls, see repository for details</h1>
+    <head>
+        <meta name="go-import" content="go.ectobase.dev git https://github.com/ectobase/ectobase">
+        <meta http-equiv="refresh" content="0;URL='https://github.com/ectobase/ectobase'">
+    </head>
+
+    <body>
+    Redirecting you to the <a href="https://github.com/ectobase/ectobase">project page</a>...
+    </body>
 </html>
